address multiple entries insertion